--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <title>Welcome to GitTraining</title>
     </head>
   <body>
-     <h1> Welcome to my git training..i am just trying to play around. Stay blessed </h1> 
+     <h1 style="color: red"> Welcome to my git training.. Stay blessed </h1> 
   </body>  
 </html>
